--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -1104,6 +1104,11 @@ margin-left: 30px;
 }
 
 
+.hide {
+
+    display: none;
+
+}
 
 
 /*    Billboard    */
@@ -1736,7 +1741,7 @@ background-color: #ffffff;
 
 display: block;
 width: 100%;
-height: 1150px;
+height: 1240px;
 background-color: #ffffff;       
 
 }
