--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -868,7 +868,7 @@ background-color: #ffffff;
 
     display: block;
     width: 100%;
-    height: 3000px;
+    height: 3200px;
 
     
 
@@ -902,19 +902,26 @@ background-color: #ffffff;
 
 .pt iframe {
 
-    margin-left: 33%;
+    margin-left: 37%;
     margin-top: 3%;
-    width:35%;
-    height:25%; 
+    width:400px;
+    height:750px; 
 
 }
 
-.pt img {
+.gr {
 
     float: left;
-    width: 20%;
+    width: 18%;
     margin-top: 3%;
-    margin-left: 20%;
+    margin-left: 23%;
+}
+
+.funicon {
+
+    margin-left: 25%;
+    margin-top:3%;
+    width: 60%;
 }
 
 #mock {
@@ -1365,7 +1372,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1800px;
+    height: 1850px;
     background-color: #ffffff;    
 
 }
@@ -1424,7 +1431,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 2000px;
+    height: 1850px;
     background-color: #ffffff;
 
 }
@@ -1481,6 +1488,8 @@ header.dark nav ul li a:hover{
     
 
 }
+
+
 
 .research #d1 {
 
@@ -1856,7 +1865,7 @@ background-color: #ffffff;
 
     display: block;
     width: 100%;
-    height: 2000px;
+    height: 2400px;
 
     
 
@@ -1893,17 +1902,22 @@ background-color: #ffffff;
     margin-left: 0%;
     margin-top: 3%;
     width:100%;
-    height:25%; 
+    height:600px; 
 
 }
+.gr {
 
-.pt img {
-
+    float: left;
+    width: 250px;
+    margin-top: 3%;
    
-    width: 50%;
-    margin-top: 15%;
-    margin-left: 25%;
-    margin-bottom: 3%;
+}
+
+.funicon {
+
+   margin-left: -10%;
+    margin-top:3%;
+    width:100%;
 }
 
 #mock {
