--- a/work/css/Collection.css
+++ b/work/css/Collection.css
@@ -273,7 +273,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1200px;
+    height: 1100px;
     text-align: center;
     background-color: #f2f3f7; 
 
@@ -290,7 +290,16 @@ header.dark nav ul li a:hover{
    
 }
 
+#error{
 
+    width: 40%;
+
+}
+#hiw {
+
+    width: 40%;
+
+}
 
 
 /*    footer    */
@@ -567,7 +576,7 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 500px;
+    height: 550px;
     text-align: center;
     background-color: #f2f3f7; 
 
@@ -584,6 +593,16 @@ header.dark nav ul li a:hover{
    
 }
 
+#error{
+
+    width: 70%;
+
+}
+#hiw {
+
+    width: 70%;
+
+}
 
 
 
