--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -273,10 +273,26 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 200px;
+    height: 300px;
     text-align: center;
 
     
+}
+
+
+.bg h1{
+
+
+    padding-top: 5%;
+    color: #4A90E2;
+    font-family: "raleway-bold";
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 3%;
+    width: 600px;
+    margin: auto;
+
+   
 }
 
 .bg h2{
@@ -587,11 +603,25 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 200px;
+    height: 250px;
     text-align: center;
 
     
 }
+
+.bg h1{
+
+    color: #4A90E2;
+    font-family: "raleway-bold";
+    font-size: 24px;
+    font-weight: bold;
+    padding-top: 5%;
+    margin: auto;
+    width: 350px;
+   
+}
+
+
 
 .bg h2{
 
