--- a/work/css/Collection.css
+++ b/work/css/Collection.css
@@ -37,12 +37,13 @@
 
 }
 
-
+@media screen and (min-width:1440px){
 
 
 /*  General CSS*/
 body{
     background: #fff;
+    max-width: 1440px;
 }
 
 .wrapper{
@@ -330,7 +331,7 @@ footer .rights p a{
 
 
 
-
+}
 
 
 
