--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,62 @@ body {
     body {
       font-size: 16px; } }
 
+
+.aboutme p {
+
+  font-family: "Quicksand", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.8;
+  color: rgba(0, 0, 0, 0.7);
+
+
+}
+
+
+.aboutme a{
+
+  font-family: "Quicksand", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.8;
+  color: rgba(0, 0, 0, 0.7);
+  text-decoration: underline;
+  display: inline-block;
+  position: relative;
+
+
+}
+
+
+
+
+
+.shine {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left:50%;
+  -webkit-transform: translate(-50%,-50%);
+}
+
+a.effect-shine:hover {
+  -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+  -webkit-mask-size: 200%;
+  animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+  from {
+    -webkit-mask-position: 150%;
+  }
+  
+  to {
+    -webkit-mask-position: -50%;
+  }
+}
+
+
 a {
   color: #2c98f0;
   -webkit-transition: 0.5s;
