--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -274,57 +274,83 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 300px;
-    text-align: center;
+    height: 1500px;
+    
 
     
 }
 
 
-.bg h1{
 
+.bg h2 {
 
-    padding-top: 5%;
-    color: #4A90E2;
+    color: #616161;
     font-family: "raleway-bold";
     font-size: 30px;
     font-weight: bold;
     padding-top: 3%;
-    width: 600px;
-    margin: auto;
-
+    text-align: center;
    
 }
 
-.bg h2{
+.subtitle p {
 
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    width: 60%;
+    text-align: center;
+    margin-left: 20%;
+
+}
+
+
+.bg ul li{
+    list-style: none;
+    display: block;
+    width: 21%;
+    float: left;
+    margin-right:2%;
+    text-align: center;
+}
+
+.bg ul li:first-child{
+    margin-left: 15%;
+}
+
+
+.bg ul li h2{
     color: #616161;
     font-family: "raleway-bold";
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bold;
-    padding-top: 3%;
-    width: 600px;
-    margin: auto;
+    margin-top: 3%;
 
+}
+
+.bg ul li p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    margin-top: 10%;
+    letter-spacing: .5px;
+
+}
+
+.bg a {
+
+    color: #616161;
+    font-family: "raleway-regular";
+    font-size: 35px;
+    font-weight: bold;
    
-}
-
-a{
-
-     
-    color: #616161;
-}
-
-.link {
-
-  
-    color: #616161;
-    font-family: "raleway-bold";
-    font-size: 18px;
-    font-weight: bold;
-    padding-top: 3%;
-    width: 600px;
-    margin: auto;
+    text-align: center;
+    text-decoration: underline;
+    width:10%;
+    margin-left: 42.5%;
 
 }
 
@@ -689,3 +715,4 @@ footer .rights p a{
 
 
 }
+*/
