--- a/work/css/blushup.css
+++ b/work/css/blushup.css
@@ -44,6 +44,7 @@
 body{
     background: #fff;
     max-width: 1440px;
+    width: 100%;
 }
 
 .wrapper{
@@ -346,14 +347,24 @@ header.dark nav ul li a:hover{
     font-family: "raleway-regular";
     font-size: 35px;
     font-weight: bold;
-   
-    text-align: center;
     text-decoration: underline;
-    width:10%;
-    margin-left: 42.5%;
-
+    
+  
 }
 
+.bg a p {
+
+     text-align: center;
+}
+
+.bg hr {
+
+
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 5%;
+
+}
 
 
 /*    footer    */
@@ -630,55 +641,94 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 250px;
-    text-align: center;
+    height: 1500px;
+    
 
     
 }
 
-.bg h1{
 
-    color: #4A90E2;
+
+.bg h2 {
+
+    color: #616161;
     font-family: "raleway-bold";
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
-    padding-top: 5%;
-    margin: auto;
-    width: 350px;
+    padding-top: 3%;
+    text-align: center;
    
 }
 
+.subtitle p {
+
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 16px;
+    line-height: 28px; 
+    letter-spacing: .5px;
+    width: 80%;
+    text-align: center;
+    margin-left: 10%;
+
+}
 
 
-.bg h2{
+.bg ul li{
+    list-style: none;
+    display: block;
+    width: 21%;
+    float: left;
+    margin-right:10%;
+    text-align: center;
+}
 
+.bg ul li:first-child{
+    margin-left: 5%;
+}
+
+
+.bg ul li h2{
     color: #616161;
     font-family: "raleway-bold";
     font-size: 20px;
     font-weight: bold;
-    padding-top: 3%;
-    margin: auto;
-    width: 350px;
-   
+    margin-top: 3%;
+
 }
 
+.bg ul li p{
+    color: #838181;
+    font-family: "raleway-regular";
+    font-size: 14px;
+    line-height: 28px; 
+    margin-top: 10%;
+    letter-spacing: .5px;
 
-a{
-
-     
-    color: #616161;
 }
 
-.link {
+.bg a {
 
-  
     color: #616161;
-    font-family: "raleway-bold";
-    font-size: 18px;
+    font-family: "raleway-regular";
+    font-size: 28px;
     font-weight: bold;
-    padding-top: 3%;
-    width: 350px;
-    margin: auto;
+    text-decoration: underline;
+    
+  
+}
+
+.bg a p {
+
+     text-align: center;
+}
+
+.bg hr {
+
+
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 5%;
 
 }
 
