--- a/work/css/farm.css
+++ b/work/css/farm.css
@@ -393,7 +393,6 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1600px;
     background-color: #ffffff;    
 
 }
@@ -452,7 +451,6 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 2100px;
     background-color: #ffffff;
 
 }
@@ -555,7 +553,6 @@ header.dark nav ul li a:hover{
 
     display: block;
     width: 100%;
-    height: 1000px;
     background-color: #ffffff;    
 
 }
@@ -618,7 +615,6 @@ header.dark nav ul li a:hover{
 
 display: block;
 width: 100%;
-height: 2100px;
 background-color: #ffffff;    
 
 
@@ -689,7 +685,6 @@ background-color: #ffffff;
 
 display: block;
 width: 100%;
-height: 1800px;
 background-color: #ffffff;    
 
 
@@ -755,7 +750,6 @@ background-color: #ffffff;
 
 display: block;
 width: 100%;
-height: 2850px;
 background-color: #ffffff;       
 
 }
@@ -815,7 +809,6 @@ background-color: #ffffff;
 
 display: block;
 width: 100%;
-height: 700px;
 background-color: #ffffff;
 
 
@@ -834,9 +827,10 @@ background-color: #ffffff;
     text-align: left;
     margin-left: 17%;
 
+
 }
 
-.pp span {
+.pp p {
 
     display: block;
     color: #838181;
@@ -848,7 +842,7 @@ background-color: #ffffff;
     width: 500px;
     margin-top: 3%;
     float: left;
-
+    margin-bottom: 3%;
 
 }
 
@@ -937,7 +931,6 @@ background-color: #ffffff;
 
     display: block;
     width: 100%;
-    height: 350px;
     background-color: #ffffff;
 
 }
@@ -1832,7 +1825,7 @@ background-color: #ffffff;
 
 }
 
-.pp span {
+.pp p {
 
     display: block;
     color: #838181;
